# NplBrowser

./: .gitignore  CMakeLists.txt  README.md  build.bat  publish.bat
NplCefPlugin/: CMakeLists.txt
NplCefPlugin/src/: MessageWindow.cpp  MessageWindow.h  NplCefBrowserImporter.cpp  NplMessageWindow.cpp  NplMessageWindow.h  stdafx.h
NplCefProcess/: CMakeLists.txt
NplCefProcess/src/: main.cpp
cef_win32/: README.txt
cef_win32/include/: cef_pack_resources.h  cef_pack_strings.h  cef_version.h
cef_win32/tests/cefclient/: CMakeLists.txt  cefclient_to_npl.cpp  cefclient_to_npl.h  cefclient_win.cc
cef_win32/tests/cefclient/browser/: client_handler.cc  root_window_manager.cc  root_window_manager.h  root_window_win.cc
cef_win32/tests/gtest/src/: gtest-all.cc
cef_win64/: CMakeLists.txt
cef_win64/Resources/: cef.pak
cef_win64/include/: cef_version.h
cef_win64/tests/cefclient/: CMakeLists.txt  CefClientConfig.h
cef_win64/tests/cefclient/browser/: main_context_impl.cc  test_runner.cc
cef_win64/tests/cefclient/resources/: urlrequest.html
cef_win64/tests/cefsimple/: CMakeLists.txt
cef_win64/tests/ceftests/: CMakeLists.txt
cef_win64/tests/gtest/include/gtest/: gtest.h
cmake/: cef_variables.cmake
tests/cefclient/: CMakeLists.txt  CefClientConfig.cpp  cefclient_win.cc  debug.bat
tests/cefclient/browser/: root_window_manager.cc  root_window_win.cc  root_window_win.h
